@@ -5,7 +5,7 @@
  */
 class phpVBoxConfig {
 
-/* Username / Password for system user that runs VirutalBox */
+/* Username / Password for system user that runs VirtualBox */
 var $username = 'vbox';
 var $password = 'pass';
 var $location = 'http://127.0.0.1:18083/';
